# src/controllers/auth.js
@@ -27,16 +27,15 @@ export const registerUserController = async (req, res) => {
 };
 
 export const loginUserController = async (req, res) => {
-  const session = await loginUser(req.body);
+  const { user, session } = await loginUser(req.body);
 
   setupSession(res, session);
 
   res.json({
     status: 200,
     message: 'Successfully logged in an user!',
-    data: {
-      accessToken: session.accessToken,
-    },
+    data: user,
+    accessToken: session.accessToken,
   });
 };
 
